--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -2,13 +2,19 @@
 <br>
 <%= link_to "Add new bookmark", new_list_bookmark_path(@list) %>
 <h3>All bookmarks</h3>
-<% @list.bookmarks.each do |bookmark| %>
-  <li>
-    <%= bookmark.comment %>
-    <%= link_to bookmark_path(bookmark), method: :delete, data: {confirm: "Are you sure?"} do %>
-    <i class="fas fa-trash"></i>
-    <% end %>
-    <br>
-    <p>Name of the movie: <%= bookmark.movie.title %> </p>
-  </li>
+<div class='grid'>
+  <% @list.bookmarks.each do |bookmark| %>
+    <div class="card">
+      <div>
+        <%= bookmark.comment %>
+        <%= link_to bookmark_path(bookmark), method: :delete, data: {confirm: "Are you sure?"} do %>
+        <i class="fas fa-trash"></i>
+        <% end %>
+      </div>
+      <div>
+        <p>Name of the movie: <%= bookmark.movie.title %> </p>
+      </div>
+    </div>
+</div>
+
 <% end %>
