--- a/app/assets/stylesheets/lists.scss
+++ b/app/assets/stylesheets/lists.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the lists controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.grid-list {
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.card-list {
+  background-size: cover;
+  width: 400px;
+  height: 300px;
+  padding: 50px;
+}
