--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,4 +1,9 @@
-<%= simple_form_for [@list] do |f| %>
-<%= f.input :name %>
-<%= f.submit "Submit list" %>
-<% end %>
+<div class="container">
+  <h3>Add a new list</h3>
+  <%= simple_form_for [@list] do |f| %>
+  <%= f.input :name %>
+  <%= f.input :photos, as: :file, input_html: { multiple: true }  %>
+  <%= f.submit "Submit list", class: "btn" %>
+  <% end %>
+
+</div>
