--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,6 +1,9 @@
-<h3>Add a new bookmark</h3>
-<%= simple_form_for [@list, @bookmark] do |f| %>
-<%= f.input :comment %>
-<%= f.association :movie %>
-<%= f.submit "Submit bookmark" %>
-<% end %>
+<div class="container">
+
+  <h3>Add a new bookmark</h3>
+    <%= simple_form_for [@list, @bookmark] do |f| %>
+    <%= f.input :comment %>
+    <%= f.association :movie %>
+    <%= f.submit "Submit bookmark", class: "btn" %>
+    <% end %>
+</div>
