--- a/app/assets/stylesheets/lists.scss
+++ b/app/assets/stylesheets/lists.scss
@@ -14,8 +14,8 @@
   background-color: #4E413B;
   box-shadow: 0px 0px 3px #222831;
   color: #E2DED3;
-  font-weight: 700;
-  font-size: 56px;
+  font-weight: 600;
+  font-size: 32px
 }
 
 #add {
@@ -34,14 +34,14 @@
   border: 2px solid #4E413B;
   border-radius: 8px;
   background-size: cover;
-  width: 1200px;
-  height: 1600px;
+  width: 640px;
+  height: 800px;
   padding: 160px 80px;
 }
 
 .titles-list {
-  font-size: 80px;;
-  font-weight: 800;
+  font-size: 48px;
+  font-weight: 600;
   color: #E2DED3;
   box-shadow: 1px 1px 3px #000000a6;
   padding: 8px 16px;
